--- a/Css/style.css
+++ b/Css/style.css
@@ -24,10 +24,7 @@ li {
   background-color: #04435E;
 }
 
-
-
-
-.header_ul {
+.header__wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -61,8 +58,8 @@ li {
   height: 450px;
 }
 
-.hero__title {
-  padding-top: 175px;
+.hero__title2 {
+  margin-top: -50px;
   color: white;
   font-weight: 600;
   font-size: 48px;
@@ -72,7 +69,7 @@ li {
   vertical-align: middle;
 }
 
-.hero__text {
+.hero__text2 {
   margin-top: 10px;
   color: white;
   font-weight: 600;
@@ -138,105 +135,6 @@ li {
 }
 
 .doctors__nav {
-.iteam {
-  color: #04243d;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header_2 {
-  background-color: #04243d;
-}
-
-.a {
-  color: white;
-}
-
-.header_2_wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header_2_ul {
-  display: flex;
-  align-items: center;
-  gap: 30px;
-}
-
-.btn {
-  border: none;
-  list-style: none;
-  text-decoration: none;
-  background-color: #063050;
-  color: white;
-  padding: 20px 20px;
-  border-radius: 10px;
-}
-
-.hero_wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.p-1 {
-  color: #ffffff;
-  font-size: 36px;
-}
-
-.p-2 {
-  color: white;
-  max-width: 578px;
-}
-
-.btn-1 {
-  color: #04243d;
-  background-color: #ffffff;
-  padding: 10px 20px;
-  border: none;
-  list-style: none;
-  text-decoration: none;
-  border-radius: 10px;
-}
-
-.btn-2 {
-  border: 2px solid white;
-  color: white;
-  list-style: none;
-  text-decoration: none;
-  padding: 10px 20px;
-  background-color: #04243d;
-  border-radius: 10px;
-}
-
-.hero {
-  background-color: #04243d;
-  padding: 200px 0px;
-}
-
-.color-1 {
-  color: #04243d;
-  font-size: 48px;
-}
-
-.color {
-  color: #04243d;
-}
-
-.nimadi_wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  border-radius: 40px;
-  padding: 80px 200px;
-  gap: 50px;
-}
-
-.nimadi_wrapper {
-  margin-top: -230px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -251,7 +149,7 @@ li {
   vertical-align: middle;
 }
 
-.border {
+.bordera {
   border-bottom: 5px solid #04435E;
 }
 
@@ -369,6 +267,141 @@ li {
   color: #04435E;
   border-radius: 10px;
   margin-top: 30px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto";
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1440px;
+  padding: 40px 20px;
+}
+
+a {
+  list-style: none;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+  text-decoration: none;
+}
+
+.header_ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.iteam {
+  color: #04243d;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header_2 {
+  background-color: #04243d;
+}
+
+.a {
+  color: white;
+}
+
+.header_2_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header_2_ul {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.btn {
+  border: none;
+  list-style: none;
+  text-decoration: none;
+  background-color: #063050;
+  color: white;
+  padding: 20px 20px;
+  border-radius: 10px;
+}
+
+.hero_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.p-1 {
+  color: #ffffff;
+  font-size: 36px;
+}
+
+.p-2 {
+  color: white;
+  max-width: 578px;
+}
+
+.btn-1 {
+  color: #04243d;
+  background-color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  list-style: none;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+.btn-2 {
+  border: 2px solid white;
+  color: white;
+  list-style: none;
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: #04243d;
+  border-radius: 10px;
+}
+
+.hero {
+  background-color: #04243d;
+  padding: 200px 0px;
+}
+
+.color-1 {
+  color: #04243d;
+  font-size: 48px;
+}
+
+.color {
+  color: #04243d;
+}
+
+.nimadi_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border-radius: 40px;
+  padding: 80px 200px;
+  gap: 50px;
+}
+
+.nimadi_wrapper {
+  margin-top: -230px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .p-1 {
   margin-bottom: 20px;
 }
