--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -6,8 +6,8 @@
 }
 .container {
 }
-.hero__title {
-    padding-top: 175px;
+.hero__title2 {
+    margin-top: -50px;
 color: white;
 font-weight: 600;
 font-size: 48px;
@@ -17,8 +17,9 @@ text-align: center;
 vertical-align: middle;
 
 }
-.hero__text {
+.hero__text2 {
     margin-top: 10px;
+    
 color: white;
 font-weight: 600;
 font-size: 20px;
