--- a/scss/blocks/_blocks.scss
+++ b/scss/blocks/_blocks.scss
@@ -1,9 +1,8 @@
-@import "./glavni";
 
 @import "./header";
 @import "./hero";
 @import "./plastik";
 @import "./doctors";
 @import "./footer";
-
 @import "./glavni";
+@import "./xizmatlar"
