--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -2,7 +2,7 @@
   background-color: #04435e;
   padding-top: 100px;
   margin-top: 60px;
-  background-image: url(img/4835b561cb1cad1de0180f3a4b3b22d96e147a7d\(1\));
+  background-image: url(/img/4835b561cb1cad1de0180f3a4b3b22d96e147a7d.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
