--- a/scss/blocks/_doctors.scss
+++ b/scss/blocks/_doctors.scss
@@ -28,6 +28,7 @@
   border: none;
 }
 .doctors__info {
+  height: 350px;
   margin-top: 60px;
   display: flex;
   align-items: center;
@@ -38,8 +39,9 @@
 }
 .doctor__card {
   width: 267.8800048828125px;
-  height: 270.67999267578125px;
-  background-color: rgb(246, 246, 246);
+background-color: rgb(246, 246, 246);  
+height: 270.67999267578125px;
+box-shadow: 0px 0px 10px 2px black;
   border-radius: 10px;
 }
 .doctor__img {
