--- a/Css/style.css
+++ b/Css/style.css
@@ -411,6 +411,112 @@ li {
   max-width: 500px;
 }
 
+.nigetta {
+  margin-left: 340px;
+}
+
+.itemitem {
+  margin-top: 30px;
+}
+
+.aa_wrapper {
+  box-shadow: 0px 0px 30px 2px black;
+  padding: 30px;
+  border-radius: 20px;
+}
+
+.gild {
+  color: #c0976b;
+  font-size: 30px;
+  max-width: 500px;
+}
+
+.niniga {
+  color: black;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.grt {
+  color: gray;
+  max-width: 500px;
+}
+
+.gildd {
+  color: #c0976b;
+  font-size: 30px;
+  margin-top: 30px;
+}
+
+.grtt {
+  color: gray;
+  margin-top: 20px;
+}
+
+.grttt {
+  color: gray;
+  margin-top: 20px;
+  max-width: 400px;
+}
+
+.boxxx {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.gg_wrapper {
+  box-shadow: 0px 0px 30px 2px black;
+  padding: 30px;
+  border-radius: 20px;
+}
+
+.aa {
+  margin-top: 100px;
+}
+
+.footer__list__inpu {
+  color: black;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.footer__bt {
+  background-color: #04243d;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-left: 150px;
+}
+
+.bol {
+  font-size: 30px;
+  color: #04243d;
+  margin-bottom: 60px;
+}
+
+.jiji {
+  margin-right: 10px;
+}
+
+.yy_wrapper {
+  box-shadow: 0px 0px 30px 2px black;
+  padding: 20px 100px;
+  border-radius: 20px;
+  max-width: 600px;
+  margin-left: 400px;
+}
+
+.yy {
+  margin-top: 100px;
+}
+
+.cpla_content {
+  margin-top: 150px;
+}
+
 .header {
   background-color: #04435e;
 }
@@ -1091,4 +1197,110 @@ li {
   border: 1px solid gray;
   border-radius: 30px;
   max-width: 500px;
+}
+
+.nigetta {
+  margin-left: 340px;
+}
+
+.itemitem {
+  margin-top: 30px;
+}
+
+.aa_wrapper {
+  box-shadow: 0px 0px 30px 2px black;
+  padding: 30px;
+  border-radius: 20px;
+}
+
+.gild {
+  color: #c0976b;
+  font-size: 30px;
+  max-width: 500px;
+}
+
+.niniga {
+  color: black;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.grt {
+  color: gray;
+  max-width: 500px;
+}
+
+.gildd {
+  color: #c0976b;
+  font-size: 30px;
+  margin-top: 30px;
+}
+
+.grtt {
+  color: gray;
+  margin-top: 20px;
+}
+
+.grttt {
+  color: gray;
+  margin-top: 20px;
+  max-width: 400px;
+}
+
+.boxxx {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.gg_wrapper {
+  box-shadow: 0px 0px 30px 2px black;
+  padding: 30px;
+  border-radius: 20px;
+}
+
+.aa {
+  margin-top: 100px;
+}
+
+.footer__list__inpu {
+  color: black;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.footer__bt {
+  background-color: #04243d;
+  color: white;
+  padding: 15px 30px;
+  border-radius: 10px;
+  margin-top: 20px;
+  margin-left: 150px;
+}
+
+.bol {
+  font-size: 30px;
+  color: #04243d;
+  margin-bottom: 60px;
+}
+
+.jiji {
+  margin-right: 10px;
+}
+
+.yy_wrapper {
+  box-shadow: 0px 0px 30px 2px black;
+  padding: 20px 100px;
+  border-radius: 20px;
+  max-width: 600px;
+  margin-left: 400px;
+}
+
+.yy {
+  margin-top: 100px;
+}
+
+.cpla_content {
+  margin-top: 150px;
 }/*# sourceMappingURL=style.css.map */
