--- a/Css/style.css
+++ b/Css/style.css
@@ -340,16 +340,16 @@ li {
 }
 
 .nimadi_wrapper {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
 }
 
 .section_content {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 10px 2px gray;
   padding: 10px;
 }
 
 .section-3_content {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
   text-align: center;
   padding: 10px;
 }
@@ -359,14 +359,14 @@ li {
 }
 
 .section_5_content {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
   padding: 10px;
   border-radius: 20px;
   margin-left: -20px;
 }
 
 .bola {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
   padding: 10px;
   border-radius: 10px;
 }
@@ -420,7 +420,7 @@ li {
 }
 
 .aa_wrapper {
-  box-shadow: 0px 0px 30px 2px black;
+  box-shadow: 0px 0px 30px 2px gray;
   padding: 30px;
   border-radius: 20px;
 }
@@ -467,7 +467,7 @@ li {
 }
 
 .gg_wrapper {
-  box-shadow: 0px 0px 30px 2px black;
+  box-shadow: 0px 0px 30px 2px gray;
   padding: 30px;
   border-radius: 20px;
 }
@@ -502,7 +502,7 @@ li {
 }
 
 .yy_wrapper {
-  box-shadow: 0px 0px 30px 2px black;
+  box-shadow: 0px 0px 30px 2px gray;
   padding: 20px 100px;
   border-radius: 20px;
   max-width: 600px;
@@ -515,6 +515,154 @@ li {
 
 .cpla_content {
   margin-top: 150px;
+}
+
+.section_wrapper {
+  overflow-x: scroll;
+}
+
+.section_5_wrapper {
+  overflow-x: scroll;
+  gap: 60px;
+}
+
+.section-3_wrapper {
+  overflow-x: scroll;
+  gap: 30px;
+}
+
+@media only screen and (max-width: 480px) {
+  .header_2_ul {
+    display: none;
+  }
+  .hero_wrapper {
+    display: inline;
+  }
+  .niga_ing {
+    max-width: 400px;
+    max-height: 400px;
+  }
+  .nimadi_wrapper {
+    display: inline;
+    max-width: 400px;
+    max-height: 800px;
+    box-shadow: none;
+  }
+  .nimadi {
+    margin-top: 100px;
+    margin-left: 100px;
+  }
+  .nimadi_content {
+    margin-top: 50px;
+    box-shadow: 0px 0px 30px 2px gray;
+    padding: 30px;
+    border-radius: 20px;
+  }
+  .nitter {
+    display: none;
+  }
+  .section-2_wrapper {
+    display: inline;
+  }
+  .hehe {
+    font-size: 40px;
+    max-width: 400px;
+  }
+  .okkk {
+    max-width: 400px;
+    max-height: 400px;
+    margin-top: 100px;
+  }
+  .niggette {
+    display: inline;
+  }
+  .bola {
+    margin-top: 30px;
+  }
+  .footer__ul {
+    flex-direction: column;
+  }
+  .footer__li {
+    margin-top: 70px;
+  }
+  .footer {
+    padding-top: 0px;
+  }
+  .boxxx {
+    display: inline;
+  }
+  .gg_wrapper {
+    margin-top: 100px;
+    padding: 20px;
+  }
+  .fedya {
+    max-width: 400px;
+  }
+  .yy {
+    margin-left: -390px;
+  }
+  .footer__bt {
+    margin-left: 50px;
+  }
+  .aa_content {
+    margin-left: -10px;
+  }
+}
+.form-group {
+  max-width: 400px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+}
+
+.icon-input {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid #aaa;
+  margin-bottom: 25px;
+  padding-bottom: 8px;
+}
+
+.icon-input img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.icon-input input {
+  border: none;
+  outline: none;
+  font-size: 20px;
+  width: 100%;
+}
+
+.service-select label {
+  color: #888;
+  font-size: 16px;
+}
+
+.dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid #aaa;
+  padding: 8px 0;
+  cursor: pointer;
+}
+
+.dropdown span {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.dropdown img {
+  width: 20px;
+  height: 20px;
+}
+
+.yy_wrapper {
+  box-shadow: 0px 0px 30px 2px gray;
+  padding: 20px 100px;
+  border-radius: 20px;
 }
 
 .header {
@@ -1128,16 +1276,16 @@ li {
 }
 
 .nimadi_wrapper {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
 }
 
 .section_content {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 10px 2px gray;
   padding: 10px;
 }
 
 .section-3_content {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
   text-align: center;
   padding: 10px;
 }
@@ -1147,14 +1295,14 @@ li {
 }
 
 .section_5_content {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
   padding: 10px;
   border-radius: 20px;
   margin-left: -20px;
 }
 
 .bola {
-  box-shadow: 0px 0px 15px 2px black;
+  box-shadow: 0px 0px 15px 2px gray;
   padding: 10px;
   border-radius: 10px;
 }
@@ -1208,7 +1356,7 @@ li {
 }
 
 .aa_wrapper {
-  box-shadow: 0px 0px 30px 2px black;
+  box-shadow: 0px 0px 30px 2px gray;
   padding: 30px;
   border-radius: 20px;
 }
@@ -1255,7 +1403,7 @@ li {
 }
 
 .gg_wrapper {
-  box-shadow: 0px 0px 30px 2px black;
+  box-shadow: 0px 0px 30px 2px gray;
   padding: 30px;
   border-radius: 20px;
 }
@@ -1290,7 +1438,7 @@ li {
 }
 
 .yy_wrapper {
-  box-shadow: 0px 0px 30px 2px black;
+  box-shadow: 0px 0px 30px 2px gray;
   padding: 20px 100px;
   border-radius: 20px;
   max-width: 600px;
@@ -1303,4 +1451,152 @@ li {
 
 .cpla_content {
   margin-top: 150px;
+}
+
+.section_wrapper {
+  overflow-x: scroll;
+}
+
+.section_5_wrapper {
+  overflow-x: scroll;
+  gap: 60px;
+}
+
+.section-3_wrapper {
+  overflow-x: scroll;
+  gap: 30px;
+}
+
+@media only screen and (max-width: 480px) {
+  .header_2_ul {
+    display: none;
+  }
+  .hero_wrapper {
+    display: inline;
+  }
+  .niga_ing {
+    max-width: 400px;
+    max-height: 400px;
+  }
+  .nimadi_wrapper {
+    display: inline;
+    max-width: 400px;
+    max-height: 800px;
+    box-shadow: none;
+  }
+  .nimadi {
+    margin-top: 100px;
+    margin-left: 100px;
+  }
+  .nimadi_content {
+    margin-top: 50px;
+    box-shadow: 0px 0px 30px 2px gray;
+    padding: 30px;
+    border-radius: 20px;
+  }
+  .nitter {
+    display: none;
+  }
+  .section-2_wrapper {
+    display: inline;
+  }
+  .hehe {
+    font-size: 40px;
+    max-width: 400px;
+  }
+  .okkk {
+    max-width: 400px;
+    max-height: 400px;
+    margin-top: 100px;
+  }
+  .niggette {
+    display: inline;
+  }
+  .bola {
+    margin-top: 30px;
+  }
+  .footer__ul {
+    flex-direction: column;
+  }
+  .footer__li {
+    margin-top: 70px;
+  }
+  .footer {
+    padding-top: 0px;
+  }
+  .boxxx {
+    display: inline;
+  }
+  .gg_wrapper {
+    margin-top: 100px;
+    padding: 20px;
+  }
+  .fedya {
+    max-width: 400px;
+  }
+  .yy {
+    margin-left: -390px;
+  }
+  .footer__bt {
+    margin-left: 50px;
+  }
+  .aa_content {
+    margin-left: -10px;
+  }
+}
+.form-group {
+  max-width: 400px;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+}
+
+.icon-input {
+  display: flex;
+  align-items: center;
+  border-bottom: 2px solid #aaa;
+  margin-bottom: 25px;
+  padding-bottom: 8px;
+}
+
+.icon-input img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.icon-input input {
+  border: none;
+  outline: none;
+  font-size: 20px;
+  width: 100%;
+}
+
+.service-select label {
+  color: #888;
+  font-size: 16px;
+}
+
+.dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid #aaa;
+  padding: 8px 0;
+  cursor: pointer;
+}
+
+.dropdown span {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.dropdown img {
+  width: 20px;
+  height: 20px;
+}
+
+.yy_wrapper {
+  box-shadow: 0px 0px 30px 2px gray;
+  padding: 20px 100px;
+  border-radius: 20px;
 }/*# sourceMappingURL=style.css.map */
