--- a/views/shikoflar.html
+++ b/views/shikoflar.html
@@ -47,7 +47,7 @@
       <section class="shikof__royhat">
         <div class="container">
           <div class="royhat__wrapper">
-            <div class="doctor__card new">
+            <!-- <div class="doctor__card new">
               <img src="/img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img neww">
               <h2 class="doctor__name">Ortiqov Aziz <br>
                   Farixdjanovich</h2>
@@ -100,11 +100,14 @@
   <h2 class="doctor__name">Ortiqov Aziz <br>
       Farixdjanovich</h2>
       <p class="doctor__kind">Дерматология</p>
-</div>
+</div> -->
           
           </div>
         </div>
       </section>
       </main>
+
+      <script src="/js/doctors.js"></script>
+      <script src="/js/shikoflar.js"></script>
 </body>
 </html>
