--- a/views/index.html
+++ b/views/index.html
@@ -222,7 +222,7 @@
         <div class="container">
           <div class="box">
             <h2 class="h-2">Nega bizni tanlaysiz</h2>
-            <button class="nitter">Barcha xizmatlar</button>
+            <button class="nitter"><a href="xizmatlar.html" class="shikofga">Barcha xizmatlar</a></button>
           </div>
           <div class="border"></div>
           <div class="section_4_wrapper">
