--- a/views/niger.html
+++ b/views/niger.html
@@ -156,23 +156,27 @@
         </div>
       </section>
       <section class="yy">
+        <div class="modal">
+    
+        </div>
         <div class="container dededed">
           <div class="yy_wrapper">
             <div class="form-group">
               <div class="icon-input">
                 <img src="/img/Vector.png" alt="user icon" />
-                <input type="text" placeholder="F.I.O." />
+                <input type="text" placeholder="F.I.O." id="inp__name" />
               </div>
               <div class="icon-input">
                 <img src="/img/Vector.png" alt="phone icon" />
-                <input type="text" placeholder="Telefon raqamingiz" />
+                <input type="text" placeholder="Telefon raqamingiz" id="inp__tel"/>
               </div>
               <div class="service-select">
                 <label>Yo'nalishlar / Xizmatlar</label>
                 <div class="icon-input">
-                  <input type="text" placeholder="lavozi" />
+                  <input type="text" placeholder="lavozi" id="inp__lavoz" />
                 </div>
               </div>
+              <button class="modalniy">Yuborish</button>
             </div>
           </div>
         </div>
