--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 * {
   margin: 0;
@@ -399,6 +400,10 @@ li {
   list-style: none;
   text-decoration: none;
   border-radius: 10px;
+}
+
+.old {
+  margin-left: 360px;
 }
 
 .btn-2 {
@@ -829,9 +834,88 @@ li {
   margin-bottom: 20px;
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none; /* по умолчанию скрыто */
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  z-index: 999;
+}
+
+.modal.active {
+  display: flex;
+}
+
+.modal__wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 600px;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+  border: 2px gray solid;
+  padding: 20px 30px;
+  text-align: center;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.btn__modaal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #888;
+  transition: color 0.3s;
+}
+
+.btn__modaal:hover {
+  color: #000;
+}
+
+.modalniy {
+  background-color: #04243d;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  list-style: none;
+  text-decoration: none;
+}
+
+.text {
+  font-size: 22px;
+  color: #333;
+  margin-top: 40px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
 @media only screen and (max-width: 480px) {
   .header_2_ul {
     display: none;
+  }
+  .modal__wrapper {
+    max-width: 400px;
   }
   .hero_wrapper {
     display: inline;
