--- a/scss/blocks/_glavni.scss
+++ b/scss/blocks/_glavni.scss
@@ -21,10 +21,6 @@ li {
   text-decoration: none;
 }
 
-
-
-
-
 .p-1 {
   color: #ffffff;
   font-size: 36px;
@@ -44,6 +40,9 @@ li {
   text-decoration: none;
   border-radius: 10px;
 }
+.old{
+  margin-left: 360px;
+}
 
 .btn-2 {
   border: 2px solid white;
@@ -59,7 +58,7 @@ li {
   background-color: #04243d;
   padding: 200px 0px;
 }
-.hero_wrapper{
+.hero_wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -403,13 +402,91 @@ li {
   overflow-x: scroll;
   gap: 30px;
 }
-.fedya{
+.fedya {
   width: 500px;
   margin-bottom: 20px;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none; /* по умолчанию скрыто */
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  z-index: 999;
+}
+
+.modal.active {
+  display: flex;
+}
+.modal__wrapper {
+  position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+    border: 2px gray solid;
+    padding: 20px 30px;
+
+    text-align: center;
+    animation: fadeIn 0.3s ease-in-out;
+}
+.btn__modaal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  color: #888;
+  transition: color 0.3s;
+}
+
+.btn__modaal:hover{
+  color: #000;
+}
+.modalniy{
+  background-color: #04243d;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 20px;
+  list-style: none;
+  text-decoration: none;
+}
+.text {
+  font-size: 22px;
+  color: #333;
+  margin-top: 40px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -60%);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+}
+
+
 @media only screen and (max-width: 480px) {
   .header_2_ul {
     display: none;
+  }
+  .modal__wrapper{
+    max-width: 400px;
   }
   .hero_wrapper {
     display: inline;
@@ -455,15 +532,15 @@ li {
   .bola {
     margin-top: 30px;
   }
-  .okkk{
+  .okkk {
     max-width: 380px;
   }
-  .niga_ing{
+  .niga_ing {
     max-width: 380px;
   }
-.h-2{
-  font-size: 30px;
-}
+  .h-2 {
+    font-size: 30px;
+  }
   .footer__ul {
     flex-direction: column;
   }
@@ -552,3 +629,5 @@ li {
   padding: 20px 100px;
   border-radius: 20px;
 }
+
+
