--- a/views/shikoflar.html
+++ b/views/shikoflar.html
@@ -11,8 +11,9 @@
     <header class="header_2">
         <div class="container">
           <div class="header_2_wrapper">
+            <i class="bi bi-list"></i>
             <div class="header_2_content">
-              <img src="./img/Button.png" alt="" />
+              <img src="/img/Button.png" alt="" />
             </div>
             <div class="header_2_content">
               <ul class="header_2_ul">
