--- a/views/tafsilot.html
+++ b/views/tafsilot.html
@@ -11,7 +11,6 @@
     <header class="header_2">
       <div class="container">
         <div class="header_2_wrapper">
-          
           <i class="bi bi-list"></i>
             <img src="/img/Button.png" alt="" />
           
@@ -86,7 +85,7 @@
                    
                 </div>
                 <div class="doctors__info">
-                    <div class="doctor__card">
+                    <!-- <div class="doctor__card">
                         <img src="/img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
                         <h2 class="doctor__name">Ortiqov Aziz <br>
                             Farixdjanovich</h2>
@@ -121,7 +120,7 @@
                         <h2 class="doctor__name">Ortiqov Aziz <br>
                             Farixdjanovich</h2>
                             <p class="doctor__kind">Дерматология</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -181,6 +180,7 @@
       </div>
     </footer>
     <script src="/js/services_detailed.js"></script>
+    <script src="/js/doctors.js"></script>
     <script src="/js/tafsilotlar.js"></script>
   </body>
 </html>
