--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -61,6 +61,17 @@
   border-radius: 10px;
   margin-top: 30px;
 }
+.footer__inp {
+  background: transparent;
+  border: none;
+  color: white;
+  padding-bottom: 10px;
+  border-bottom: 2px solid white;
+}
+.footer__inp:focus{
+  border: none; 
+}
+
 @media only screen and (max-width: 480px) {
   .footer__ul{
     flex-direction: column;
