--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,5 +1,6 @@
-.header {
+.header{
   background-color: #04435e;
+ 
 }
 
 .header_ul {
@@ -18,6 +19,7 @@
 .header_2 {
   background-color: #04243d;
   padding: 0px;
+  
 }
 
 .a {
@@ -50,16 +52,91 @@
   display: none;
 }
 
-@media only screen and (max-width: 480px) {
-  .header_2_ul{
-    display: none;
-    
+
+.block,
+.bur__menu {
+  display: none;
+}
+
+.block.active {
+  display: block;
+  background-color: #063050;
+  width: 225px;
+  height: 450px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+
+}
+  .animation{
+    animation: menu 1.3s ease-out 0s 1 forwards;
   }
-  .bi-list{
+.reverse{
+  animation: menu 1.3s ease-out 0s 1 reverse;
+}
+
+  
+  @keyframes menu {
+    0%{
+    transform: translateX(-200px);
+    }
+    50%{
+      transform: translateX(0px);
+    }
+    100%{
+      transform: translateX(0px);
+    }
+  }
+
+.bur__menu.active {
+  display: block;
+  position: absolute; 
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  width: 150px;
+  height: 0px;
+  padding: 0;
+  margin: 0;
+
+}
+
+.bur__a {
+  color: white;
+  line-height: 100px;
+}
+.hidden{
+  display: none;
+
+}
+.ips{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 5px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  position: absolute;
+  right: 0%;
+}
+@media only screen and (max-width: 480px) {
+  .header_2_ul {
+    display: none;
+  }
+
+  .bi-list {
     display: block;
     font-size: 35px;
     color: white;
+    position: relative;
+    z-index: 000;
   }
   
+
   
 }
