--- a/scss/blocks/_royhat.scss
+++ b/scss/blocks/_royhat.scss
@@ -15,3 +15,15 @@
 }
 
 
+@media only screen and (max-width: 480px) {
+    .royhat__wrapper{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 40px;
+    }
+
+    
+    
+    
+}
