--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
   </head>
   <body>
     <header class="header_2">
       <div class="container">
         <div class="header_2_wrapper">
+        
+            
+          <i class="bi bi-list"></i>
+
+          
+
+            <div class="bur ">
+              <div class="block"><button class="ips">X</button></div>
+              <ul class="bur__menu">
+                <li class="bur__list"><a href="index.html" class="bur__a animation">Biz haqimizda</a></li>
+                <li class="bur__list"><a href="xizmatlar.html" class="bur__a">Xizmatlarimiz</a></li>
+                <li class="bur__list"><a href="shikoflar.html" class="bur__a">Shifokorlar</a></li>
+                <li class="bur__list"><a href="tafsilot.html" class="bur__a">Xizmatlar tafsilotlari</a></li>
+                
+              </ul>
+            </div>
+          
           <div class="header_2_content">
             <img src="/img/Button.png" alt="" />
           </div>
@@ -371,10 +389,7 @@
             <li class="footer__li">
               <p class="bold">Bemorlar Uchun</p>
               <ul class="footer__menu">
-                <li class="footer__list__input">F.I.O</li>
-                <li class="footer__list__input">Telfon raqamlarimiz</li>
-                <li class="footer__list__input xabar">Xabar</li>
-                <button class="footer__btn">Yuborish</button>
+                <li class="footer__list"><input type="text" name="" id="" class="footer__inp" placeholder="F.I.O"></li>
               </ul>
             </li>
           </ul>
