--- a/Css/style.css
+++ b/Css/style.css
@@ -270,6 +270,15 @@ li {
   width: 110px;
 }
 
+.non {
+  display: none;
+}
+
+.selsi {
+  width: 20px;
+  height: 20px;
+}
+
 @media only screen and (max-width: 480px) {
   .plastik__img {
     max-width: 340px;
