--- a/scss/blocks/_plastik.scss
+++ b/scss/blocks/_plastik.scss
@@ -48,6 +48,13 @@
 .doctor__img {
   width: 110px;
 }
+.non{
+  display: none;
+}
+.selsi{
+  width: 20px;
+  height: 20px;
+}
 @media only screen and (max-width: 480px) {
   .plastik__img{
     max-width: 340px;
