fixed small details

--- a/scss/blocks/_xizmatlar.scss
+++ b/scss/blocks/_xizmatlar.scss
@@ -70,6 +70,11 @@ vertical-align: middle;
 color: #000000;
 text-align: center;
 }
+.new__img{
+    width: 270px;
+    height: 150px
+
+}
 
 @media only screen and (max-width: 480px) {
     .xizmatlar__wrapper{
