--- a/css/style.css
+++ b/css/style.css
@@ -1291,6 +1291,11 @@ li {
   text-align: center;
 }
 
+.new__img {
+  width: 270px;
+  height: 150px;
+}
+
 @media only screen and (max-width: 480px) {
   .xizmatlar__wrapper {
     display: flex;
