--- a/scss/blocks/_glavni.scss
+++ b/scss/blocks/_glavni.scss
@@ -592,6 +592,11 @@ li {
   .aa_content {
     margin-left: -10px;
   }
+  .ind__video{
+    max-width: 380px;
+    height: 280px;
+    margin-top: 30px;
+  }
 }
 .form-group {
   max-width: 400px;
