--- a/scss/blocks/_plastik.scss
+++ b/scss/blocks/_plastik.scss
@@ -86,12 +86,12 @@ cursor: pointer;
   cursor: pointer;
 }
 
-.old2{
-  display: none;
-}
-.next2{
-  display: none;
-}
+// .old2{
+//   display: none;
+// }
+// .next2{
+//   display: none;
+// }
 
 @media only screen and (max-width: 480px) {
   .plastik__img{
@@ -99,14 +99,14 @@ cursor: pointer;
     max-height: 200px;
   margin-left: 20px;
   }
-  .old {
-   display: none;
-  }
-  .next {
-   display: none;
-  }
-  .old2{
-    display: block;
+  // .old {
+  //  display: none;
+  // }
+  // .next {
+  //  display: none;
+  // }
+  .old{
+   
     background-color: white;
     color: black;
     border: 1px black solid;
@@ -115,11 +115,11 @@ cursor: pointer;
     position: absolute;
     z-index: 2;
     top: 40%;
-    left: 4%;
+    left: -88%;
   cursor: pointer;
 
   }
-  .next2{
+  .next{
     display: block;
     background-color: white;
     color: black;
@@ -127,7 +127,7 @@ cursor: pointer;
     padding: 10px 10px;
     border-radius: 50%;
     position: absolute;
-    right: 6%;
+    right: 10%;
     top: 40%;
     z-index: 2;
     cursor: pointer;
